# FastApi-App

./: .coverage  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml  workflow.yml
src/: main.py  model.py
tests/: test_lab2.py
trainer/: train.py
