[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["John Doe <john.doe@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
requests = "^2.28.1"
joblib = "^1.1.0"
scipy = "^1.9.1"
scikit-learn = "1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
